--- a/doc/errata/staging/ucs-school-umc-exam.yaml
+++ b/doc/errata/staging/ucs-school-umc-exam.yaml
@@ -9,4 +9,7 @@ desc: |
  * When uploading files with Internet Explorer, the files were not always correctly saved in the local
    file system by the UMC module "Exam Mode" and were therefore not distributed to the users. This error
    has now been corrected. (Bug #46710).
-bug: [46360,46710]
+ * The new UCR variable <envar>ucsschool/exam/user/homedir/autoremove</envar> has been added to control
+   whether the exam users' home directories are automatically deleted after the exam mode has ended.
+   By default (<literal>yes</literal>), the directories are removed after collecting the exam results (Bug #46719).
+bug: [46360,46710,46719]
