--- a/doc/errata/staging/ucs-school-import.yaml
+++ b/doc/errata/staging/ucs-school-import.yaml
@@ -3,7 +3,7 @@ release: "4.2"
 version: [1]
 scope: ucs_4.2-0-ucs-school-4.2
 src: ucs-school-import
-fix: 15.0.3-26A~4.2.0.201802231336
+fix: 15.0.3-27A~4.2.0.201803231424
 desc: |
  * The global user import configuration (<filename>/usr/share/ucs-school-import/configs/user_import_defaults.json</filename>) does not contain any scheme anymore. Its existence was preventing the creation of users without email address. If your configuration was using the default email or username scheme, then it must now be recreated in <filename>/var/lib/ucs-school-import/configs/user_import.json</filename>. If the input CSV does not supply an email address or username and no scheme is given, new users will not have an email address (or fail to be created without a username) (Bug #45972). The original configuration was:
     <programlisting>
@@ -19,4 +19,5 @@ desc: |
  * The internal handling of python hooks for the import process has been improved: syntax and consistency checks are now done after running the <literal>pre_create</literal> / <literal>pre_modify</literal> / <literal>pre_move</literal> hooks (Bug #46317).
  * Generated passwords of newly created users are now better readable (Bug #45640).
  * An internal improvement has been made to give python hooks more flexibility: if available, the responsible line of the CSV file is now attached to an ImportUser object that is about to be deleted (Bug #46384).
-bug: [45972, 46317, 45640, 46384]
+ * User property verification checks are executed in dry-run again (Bug #46571).
+bug: [45972, 46317, 45640, 46384, 46571]
