--- a/doc/errata/staging/ucs-school-import.yaml
+++ b/doc/errata/staging/ucs-school-import.yaml
@@ -3,7 +3,7 @@ release: "4.2"
 version: [1]
 scope: ucs_4.2-0-ucs-school-4.2
 src: ucs-school-import
-fix: 15.0.3-28A~4.2.0.201803271635
+fix: 15.0.3-29A~4.2.0.201803281535
 desc: |
  * The global user import configuration (<filename>/usr/share/ucs-school-import/configs/user_import_defaults.json</filename>) does not contain any scheme anymore. Its existence was preventing the creation of users without email address. If your configuration was using the default email or username scheme, then it must now be recreated in <filename>/var/lib/ucs-school-import/configs/user_import.json</filename>. If the input CSV does not supply an email address or username and no scheme is given, new users will not have an email address (or fail to be created without a username) (Bug #45972). The original configuration was:
     <programlisting>
@@ -20,4 +20,5 @@ desc: |
  * Generated passwords of newly created users are now better readable (Bug #45640).
  * An internal improvement has been made to give python hooks more flexibility: if available, the responsible line of the CSV file is now attached to an ImportUser object that is about to be deleted (Bug #46384).
  * User property verification checks are executed in dry-run again (Bug #46571).
-bug: [45972, 46317, 45640, 46384, 46571]
+ * A dependency solver was introduced, that will sort the order of autogeneration of attributes from schemes so that they can depend on each other (Bug #46754)
+bug: [45972, 46317, 45640, 46384, 46571, 46754]
