--- a/doc/errata/staging/ucs-school-import.yaml
+++ b/doc/errata/staging/ucs-school-import.yaml
@@ -3,11 +3,10 @@ release: "4.3"
 version: [1]
 scope: ucs_4.3-0-ucs-school-4.3
 src: ucs-school-import
-fix: 16.0.1-23A~4.3.0.201804111922
+fix:
 desc: |
  * User property verification checks are executed in dry-run again (Bug #46572).
- * New UCS@school objects are now marked with a unique object class and attribute. A script can be used to mark all existing objects: <filename>/usr/share/ucs-school-import/scripts/migrate_ucsschool_object_types</filename> (Bug #45379).
  * User property verification checks are executed in dry-run again (Bug #46572).
  * A dependency solver was introduced, that will sort the order of autogeneration of attributes from schemes so that they can depend on each other (Bug #42137).
  * The command line user import now stores the summary CSV files in separate folders for year and month (<filename class="directory">/var/lib/ucs-school-import/summary/YEAR/MONTH</filename>) (Bug #46799).
-bug: [46130, 45379, 46572, 42137, 46799]
+bug: [46130, 46572, 42137, 46799]
