--- a/doc/errata/staging/ucs-school-lib.yaml
+++ b/doc/errata/staging/ucs-school-lib.yaml
@@ -3,8 +3,7 @@ release: "4.3"
 version: [1]
 scope: ucs_4.3-0-ucs-school-4.3
 src: ucs-school-lib
-fix: 11.0.1-8A~4.3.0.201804101726
+fix:
 desc: |
  * The listing of user objects is not prevented anymore, if a malformed object exists (Bug #46130).
- * Support for adding unique object classes and attributes to UCS@school objects was added (Bug #45379).
-bug: [46130, 45379]
+bug: [46130]
