--- a/doc/errata/staging/ucs-school-import.yaml
+++ b/doc/errata/staging/ucs-school-import.yaml
@@ -3,7 +3,7 @@ release: "4.3"
 version: [1]
 scope: ucs_4.3-0-ucs-school-4.3
 src: ucs-school-import
-fix:
+fix: 16.0.1-24A~4.3.0.201804161236
 desc: |
  * User property verification checks are executed in dry-run again (Bug #46572).
  * User property verification checks are executed in dry-run again (Bug #46572).
