--- a/ucs-school-import/debian/rules
+++ b/ucs-school-import/debian/rules
@@ -29,7 +29,7 @@
 # /usr/share/common-licenses/AGPL-3; if not, see
 # <http://www.gnu.org/licenses/>.
 
-PO_FILES := $(shell find udm_hook -name '*.po')
+PO_FILES := $(shell find udm_hook syntax -name '*.po')
 MO_FILES := $(PO_FILES:%.po=%.mo)
 
 %.mo:	%.po
