--- a/doc/errata/staging/ucs-school-umc-wizards.yaml
+++ b/doc/errata/staging/ucs-school-umc-wizards.yaml
@@ -5,5 +5,5 @@ scope: ucs_4.3-0-ucs-school-4.3
 src: ucs-school-umc-wizards 
 fix: 10.0.1-1A~4.3.0.201803231614
 desc: |
- * Reenables the first objects creation dialogs for user/classes/computer wizards (Bug #46596) 
+ * Offer object creation if non exists for user/classes/computer school modules (Bug #46596)
 bug: [46596]
