--- a/doc/errata/staging/ucs-school-umc-exam.yaml
+++ b/doc/errata/staging/ucs-school-umc-exam.yaml
@@ -2,8 +2,8 @@ product: ucsschool
 release: "4.2"
 version: [1]
 scope: ucs_4.2-0-ucs-school-4.2
-src: 
-fix: 
+src: ucs-school-umc-exam
+fix: 7.0.4-22A~4.2.0.201804261315
 desc: |
  * Set room combobox to null so users have to choose a room before proceeding in the exam wizard.
 bug: [46883]
